--- a/account.html
+++ b/account.html
@@ -37,7 +37,7 @@
         <div class="section3b-dashboard"  data-aos="fade-up">
 
             <div class="profile-header-dashboard">
-                <h3  data-aos="fade-up">Myy Account</h3>
+                <h3  data-aos="fade-up">My Account</h3>
                 <i class="fa-solid fa-user"></i>
                 
             </div>
