--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="section1" >
             <div class="col-container" data-aos="fade-up">
                 <div class="col1">
-                    <h1 id="typewriter-text">A refined instant loan <br/> solution</h1>
+                    <h1 id="typewriter-text">A refined instant loan solution</h1>
                     <div class="col1-div">
                         <p>We make the process of getting a loan fast and easy. We simplify the process through our quick and secure online form.
                          </p>
