--- a/login.html
+++ b/login.html
@@ -70,8 +70,8 @@
         <h4>Sky <span class="spanner">Payz</span></h4>
         
         <div class="login-card"  data-aos="fade-up">
-            <h2>Sign in</h2>
-            <div class="pee"><p>Welcome back! Enter your details to continue</p></div>
+            <h2>Welcome back</h2>
+            <div class="pee"><p>Sign in to continue</p></div>
 
             <h5 class="alat" id="my-paragraph">Account not found !</h5>
             <form action="">
