--- a/forgot.html
+++ b/forgot.html
@@ -20,7 +20,7 @@
 <body>
     <div class="section">
         
-        <h4>Pay <span>Now</span></h4>
+        <h4>Mamaa <span class="spanner">Credit</span></h4>
         
         <div class="login-card">
             <h2>Forgot Password</h2>
