--- a/signup.html
+++ b/signup.html
@@ -22,7 +22,7 @@
 <body>
     <div class="section">
         
-        <h4>Ease <span class="spanner">Pay</span></h4>
+        <h4>Mamaa <span class="spanner">Credit</span></h4>
         
         <div class="login-card"  data-aos="fade-up">
             <h2>Create Account</h2>
