--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
             <div class="section3-col">
                 <div class="section3-div">
                     <h4>Quick Loans</h4>
-                    <p>At Easypay we've developed our application process to be as straightforward and convenient
+                    <p>At Mamma credit we've developed our application process to be as straightforward and convenient
                         as possible.</p>
                 </div>
                 <div class="section3-div">
@@ -336,7 +336,7 @@
             
 
             <div class="faq">
-                <div class="question">How long does it take to process a paynow loan?
+                <div class="question">How long does it take to process a mamaa credit loan?
                     <i class="arrow fa-solid fa-angle-right"></i>
                 </div>
                 <div class="answer">The entire process can be completed in no time! Once you complete our short application
@@ -393,7 +393,7 @@
                 <div class="answer">Yes, you can. However, the loan offer displayed to you is what we can provide at
                      the time of your application. This can increase in future as we learn more about you and there are records as to your repayments with us.
                       If you still believe you require a higher amount and 
-                    that you earn enough to access higher amounts; kindly mail us on support@paynow.com </div>
+                    that you earn enough to access higher amounts; kindly mail us on support@mamaaservice.com </div>
               </div>
 
               <div class="faq">
@@ -470,7 +470,7 @@
         <footer>
             <hr />
             <div class="subber">
-                <p>&copy; 2023 Easepay loans</p>
+                <p>&copy; 2023 Mamaa credit</p>
                 <a href="#"><p>Privacy policy</p></a>
             </div>
         </footer>
@@ -581,7 +581,7 @@ amountInput.addEventListener("input", function () {
   const durationElements = document.querySelectorAll('.durationsmall3');
 
   // Set the background color for the clicked element
-  element.style.backgroundColor = 'rgb(0, 228, 87)';
+  element.style.backgroundColor = '#0E0AEC';
 
   // Reset the background color for unselected elements
   durationElements.forEach((el) => {
