--- a/login.html
+++ b/login.html
@@ -67,7 +67,7 @@
 <body>
     <div class="section">
         
-        <h4>Sky <span class="spanner">Payz</span></h4>
+        <h4>Mamaa <span class="spanner">Credit</span></h4>
         
         <div class="login-card"  data-aos="fade-up">
             <h2>Welcome back</h2>
