--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <body>
 
     <nav>
-        <h4 class="logo">Mama<span>Credit</span></h4>
+        <h4 class="logo">Mamaa<span>Credit</span></h4>
 
         <ul>
            <!-- <li><a href="login.html" class="active2">Sign In</a></li>-->
@@ -142,7 +142,7 @@
             <div class="section3-col">
                 <div class="section3-div">
                     <h4>Quick Loans</h4>
-                    <p>At Mamma credit we've developed our application process to be as straightforward and convenient
+                    <p>At Mamaa credit we've developed our application process to be as straightforward and convenient
                         as possible.</p>
                 </div>
                 <div class="section3-div">
