--- a/account.html
+++ b/account.html
@@ -125,7 +125,7 @@
             <div class="modal" id="contactModal">
                 <div class="modal-content">
                   <span class="close" id="closeModal">&times;</span>
-                  <p>Contact Email: contact@example.com</p>
+                  <p>Contact Email: support@mamaacredit.com</p>
                 </div>
               </div>
 
