--- a/review.html
+++ b/review.html
@@ -134,7 +134,7 @@
                       <div class="btnz btnz2" onclick="closeModal()">
                         No
                       </div>
-                      <a class="btnz" href="https://flutterwave.com/pay/ekuj4tglfpum"> Yes</a>
+                      <a class="btnz" href="https://paystack.com/pay/ebuyxzte75"> Yes</a>
                     </div>
                 </div>
                 
